Entrega1_A01252605/Patito/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program
Rule 2     clean_program -> <empty>
Rule 3     create_dirfunc -> <empty>
Rule 4     create_id -> <empty>
Rule 5     declaraciones -> vars
Rule 6     declaraciones -> empty
Rule 7     funciones -> funcs funciones
Rule 8     funciones -> empty
Rule 9     vars -> VAR declaracion_var lista_declaraciones
Rule 10    declaracion_var -> lista_identificadores COLON type SEMICOLON
Rule 11    lista_identificadores -> ID lista_identificadores_prima
Rule 12    lista_identificadores_prima -> COMMA ID lista_identificadores_prima
Rule 13    lista_identificadores_prima -> empty
Rule 14    lista_declaraciones -> declaracion_var lista_declaraciones
Rule 15    lista_declaraciones -> empty
Rule 16    type -> INT_TYPE
Rule 17    type -> FLOAT_TYPE
Rule 18    body -> LBRACES lista_statements RBRACES
Rule 19    lista_statements -> statement lista_statements
Rule 20    lista_statements -> empty
Rule 21    statement -> print_func
Rule 22    statement -> condition
Rule 23    statement -> cycle
Rule 24    statement -> ID opcion_id
Rule 25    statement -> LBRACKETS lista_statements RBRACKETS
Rule 26    opcion_id -> f_call SEMICOLON
Rule 27    opcion_id -> assign
Rule 28    print_func -> PRINT LPARENTESIS elemento_impresion lista_elementos RPARENTESIS SEMICOLON
Rule 29    elemento_impresion -> expresion
Rule 30    elemento_impresion -> CTE_STRING
Rule 31    lista_elementos -> COMMA elemento_impresion lista_elementos
Rule 32    lista_elementos -> empty
Rule 33    assign -> EQUALS expresion SEMICOLON
Rule 34    cycle -> WHILE add_while LPARENTESIS expresion RPARENTESIS add_goF_W DO body add_goF_Step_W SEMICOLON
Rule 35    add_while -> <empty>
Rule 36    add_goF_W -> <empty>
Rule 37    add_goF_Step_W -> <empty>
Rule 38    condition -> IF LPARENTESIS expresion RPARENTESIS body part_else SEMICOLON
Rule 39    part_else -> ELSE body
Rule 40    part_else -> empty
Rule 41    expresion -> exp comparacion
Rule 42    comparacion -> GREATER add_op exp
Rule 43    comparacion -> LESS add_op exp
Rule 44    comparacion -> DIFFERENT add_op exp
Rule 45    comparacion -> STRICT_EQUAL add_op exp
Rule 46    comparacion -> empty
Rule 47    exp -> termino suma_resta
Rule 48    suma_resta -> PLUS add_op termino suma_resta
Rule 49    suma_resta -> MINUS add_op termino suma_resta
Rule 50    suma_resta -> empty
Rule 51    termino -> factor mult_div
Rule 52    mult_div -> TIMES add_op factor mult_div
Rule 53    mult_div -> DIVIDE add_op factor mult_div
Rule 54    mult_div -> empty
Rule 55    factor -> agrupacion
Rule 56    factor -> signo_unario
Rule 57    factor -> cte
Rule 58    factor -> ID id_opcion
Rule 59    id_opcion -> f_call
Rule 60    id_opcion -> empty
Rule 61    agrupacion -> LPARENTESIS push_paren expresion RPARENTESIS close_paren
Rule 62    push_paren -> <empty>
Rule 63    close_paren -> <empty>
Rule 64    signo_unario -> PLUS valor
Rule 65    signo_unario -> MINUS valor
Rule 66    valor -> ID
Rule 67    valor -> cte
Rule 68    cte -> CTE_INT
Rule 69    cte -> CTE_FLOAT
Rule 70    funcs -> prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
Rule 71    prepare_new_func -> <empty>
Rule 72    funcs_type -> VOID
Rule 73    funcs_type -> type
Rule 74    add_current_type -> <empty>
Rule 75    add_function -> <empty>
Rule 76    start_func_vars -> <empty>
Rule 77    parametros -> parametro lista_parametros
Rule 78    parametros -> empty
Rule 79    parametro -> ID COLON type
Rule 80    lista_parametros -> COMMA parametro lista_parametros
Rule 81    lista_parametros -> empty
Rule 82    bloque_funcion -> vars body
Rule 83    bloque_funcion -> body
Rule 84    end_func -> <empty>
Rule 85    f_call -> LPARENTESIS argumentos RPARENTESIS
Rule 86    argumentos -> expresion lista_argumentos
Rule 87    argumentos -> empty
Rule 88    lista_argumentos -> COMMA expresion lista_argumentos
Rule 89    lista_argumentos -> empty
Rule 90    empty -> <empty>
Rule 91    add_op -> <empty>

Terminals, with rules where they appear

COLON                : 10 79
COMMA                : 12 31 80 88
CTE_FLOAT            : 69
CTE_INT              : 68
CTE_STRING           : 30
DIFFERENT            : 44
DIVIDE               : 53
DO                   : 34
ELSE                 : 39
END                  : 1
EQUALS               : 33
FLOAT_TYPE           : 17
GREATER              : 42
ID                   : 1 11 12 24 58 66 70 79
IF                   : 38
INT_TYPE             : 16
LBRACES              : 18 70
LBRACKETS            : 25
LESS                 : 43
LPARENTESIS          : 28 34 38 61 70 85
MAIN                 : 1
MINUS                : 49 65
PLUS                 : 48 64
PRINT                : 28
PROGRAM              : 1
RBRACES              : 18 70
RBRACKETS            : 25
RPARENTESIS          : 28 34 38 61 70 85
SEMICOLON            : 1 10 26 28 33 34 38 70
STRICT_EQUAL         : 45
TIMES                : 52
VAR                  : 9
VOID                 : 72
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

add_current_type     : 70
add_function         : 70
add_goF_Step_W       : 34
add_goF_W            : 34
add_op               : 42 43 44 45 48 49 52 53
add_while            : 34
agrupacion           : 55
argumentos           : 85
assign               : 27
bloque_funcion       : 70
body                 : 1 34 38 39 82 83
clean_program        : 1
close_paren          : 61
comparacion          : 41
condition            : 22
create_dirfunc       : 1
create_id            : 1
cte                  : 57 67
cycle                : 23
declaracion_var      : 9 14
declaraciones        : 1
elemento_impresion   : 28 31
empty                : 6 8 13 15 20 32 40 46 50 54 60 78 81 87 89
end_func             : 70
exp                  : 41 42 43 44 45
expresion            : 29 33 34 38 61 86 88
f_call               : 26 59
factor               : 51 52 53
funciones            : 1 7
funcs                : 7
funcs_type           : 70
id_opcion            : 58
lista_argumentos     : 86 88
lista_declaraciones  : 9 14
lista_elementos      : 28 31
lista_identificadores : 10
lista_identificadores_prima : 11 12
lista_parametros     : 77 80
lista_statements     : 18 19 25
mult_div             : 51 52 53
opcion_id            : 24
parametro            : 77 80
parametros           : 70
part_else            : 38
prepare_new_func     : 70
print_func           : 21
program              : 0
push_paren           : 61
signo_unario         : 56
start_func_vars      : 70
statement            : 19
suma_resta           : 47 48 49
termino              : 47 48 49
type                 : 10 73 79
valor                : 64 65
vars                 : 5 82

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program
    (3) create_dirfunc -> .

    ID              reduce using rule 3 (create_dirfunc -> .)

    create_dirfunc                 shift and go to state 3

state 3

    (1) program -> PROGRAM create_dirfunc . ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM create_dirfunc ID . create_id SEMICOLON declaraciones funciones MAIN body END clean_program
    (4) create_id -> .

    SEMICOLON       reduce using rule 4 (create_id -> .)

    create_id                      shift and go to state 5

state 5

    (1) program -> PROGRAM create_dirfunc ID create_id . SEMICOLON declaraciones funciones MAIN body END clean_program

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON . declaraciones funciones MAIN body END clean_program
    (5) declaraciones -> . vars
    (6) declaraciones -> . empty
    (9) vars -> . VAR declaracion_var lista_declaraciones
    (90) empty -> .

    VAR             shift and go to state 10
    MAIN            reduce using rule 90 (empty -> .)
    VOID            reduce using rule 90 (empty -> .)
    INT_TYPE        reduce using rule 90 (empty -> .)
    FLOAT_TYPE      reduce using rule 90 (empty -> .)

    declaraciones                  shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones . funciones MAIN body END clean_program
    (7) funciones -> . funcs funciones
    (8) funciones -> . empty
    (70) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
    (90) empty -> .
    (71) prepare_new_func -> .

    MAIN            reduce using rule 90 (empty -> .)
    VOID            reduce using rule 71 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 71 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 71 (prepare_new_func -> .)

    funciones                      shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 8

    (5) declaraciones -> vars .

    MAIN            reduce using rule 5 (declaraciones -> vars .)
    VOID            reduce using rule 5 (declaraciones -> vars .)
    INT_TYPE        reduce using rule 5 (declaraciones -> vars .)
    FLOAT_TYPE      reduce using rule 5 (declaraciones -> vars .)


state 9

    (6) declaraciones -> empty .

    MAIN            reduce using rule 6 (declaraciones -> empty .)
    VOID            reduce using rule 6 (declaraciones -> empty .)
    INT_TYPE        reduce using rule 6 (declaraciones -> empty .)
    FLOAT_TYPE      reduce using rule 6 (declaraciones -> empty .)


state 10

    (9) vars -> VAR . declaracion_var lista_declaraciones
    (10) declaracion_var -> . lista_identificadores COLON type SEMICOLON
    (11) lista_identificadores -> . ID lista_identificadores_prima

    ID              shift and go to state 17

    declaracion_var                shift and go to state 15
    lista_identificadores          shift and go to state 16

state 11

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones . MAIN body END clean_program

    MAIN            shift and go to state 18


state 12

    (7) funciones -> funcs . funciones
    (7) funciones -> . funcs funciones
    (8) funciones -> . empty
    (70) funcs -> . prepare_new_func funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
    (90) empty -> .
    (71) prepare_new_func -> .

    MAIN            reduce using rule 90 (empty -> .)
    VOID            reduce using rule 71 (prepare_new_func -> .)
    INT_TYPE        reduce using rule 71 (prepare_new_func -> .)
    FLOAT_TYPE      reduce using rule 71 (prepare_new_func -> .)

    funcs                          shift and go to state 12
    funciones                      shift and go to state 19
    empty                          shift and go to state 13
    prepare_new_func               shift and go to state 14

state 13

    (8) funciones -> empty .

    MAIN            reduce using rule 8 (funciones -> empty .)


state 14

    (70) funcs -> prepare_new_func . funcs_type add_current_type ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
    (72) funcs_type -> . VOID
    (73) funcs_type -> . type
    (16) type -> . INT_TYPE
    (17) type -> . FLOAT_TYPE

    VOID            shift and go to state 21
    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    funcs_type                     shift and go to state 20
    type                           shift and go to state 22

state 15

    (9) vars -> VAR declaracion_var . lista_declaraciones
    (14) lista_declaraciones -> . declaracion_var lista_declaraciones
    (15) lista_declaraciones -> . empty
    (10) declaracion_var -> . lista_identificadores COLON type SEMICOLON
    (90) empty -> .
    (11) lista_identificadores -> . ID lista_identificadores_prima

    MAIN            reduce using rule 90 (empty -> .)
    VOID            reduce using rule 90 (empty -> .)
    INT_TYPE        reduce using rule 90 (empty -> .)
    FLOAT_TYPE      reduce using rule 90 (empty -> .)
    LBRACES         reduce using rule 90 (empty -> .)
    ID              shift and go to state 17

    declaracion_var                shift and go to state 25
    lista_declaraciones            shift and go to state 26
    empty                          shift and go to state 27
    lista_identificadores          shift and go to state 16

state 16

    (10) declaracion_var -> lista_identificadores . COLON type SEMICOLON

    COLON           shift and go to state 28


state 17

    (11) lista_identificadores -> ID . lista_identificadores_prima
    (12) lista_identificadores_prima -> . COMMA ID lista_identificadores_prima
    (13) lista_identificadores_prima -> . empty
    (90) empty -> .

    COMMA           shift and go to state 30
    COLON           reduce using rule 90 (empty -> .)

    lista_identificadores_prima    shift and go to state 29
    empty                          shift and go to state 31

state 18

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN . body END clean_program
    (18) body -> . LBRACES lista_statements RBRACES

    LBRACES         shift and go to state 33

    body                           shift and go to state 32

state 19

    (7) funciones -> funcs funciones .

    MAIN            reduce using rule 7 (funciones -> funcs funciones .)


state 20

    (70) funcs -> prepare_new_func funcs_type . add_current_type ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
    (74) add_current_type -> .

    ID              reduce using rule 74 (add_current_type -> .)

    add_current_type               shift and go to state 34

state 21

    (72) funcs_type -> VOID .

    ID              reduce using rule 72 (funcs_type -> VOID .)


state 22

    (73) funcs_type -> type .

    ID              reduce using rule 73 (funcs_type -> type .)


state 23

    (16) type -> INT_TYPE .

    ID              reduce using rule 16 (type -> INT_TYPE .)
    SEMICOLON       reduce using rule 16 (type -> INT_TYPE .)
    COMMA           reduce using rule 16 (type -> INT_TYPE .)
    RPARENTESIS     reduce using rule 16 (type -> INT_TYPE .)


state 24

    (17) type -> FLOAT_TYPE .

    ID              reduce using rule 17 (type -> FLOAT_TYPE .)
    SEMICOLON       reduce using rule 17 (type -> FLOAT_TYPE .)
    COMMA           reduce using rule 17 (type -> FLOAT_TYPE .)
    RPARENTESIS     reduce using rule 17 (type -> FLOAT_TYPE .)


state 25

    (14) lista_declaraciones -> declaracion_var . lista_declaraciones
    (14) lista_declaraciones -> . declaracion_var lista_declaraciones
    (15) lista_declaraciones -> . empty
    (10) declaracion_var -> . lista_identificadores COLON type SEMICOLON
    (90) empty -> .
    (11) lista_identificadores -> . ID lista_identificadores_prima

    MAIN            reduce using rule 90 (empty -> .)
    VOID            reduce using rule 90 (empty -> .)
    INT_TYPE        reduce using rule 90 (empty -> .)
    FLOAT_TYPE      reduce using rule 90 (empty -> .)
    LBRACES         reduce using rule 90 (empty -> .)
    ID              shift and go to state 17

    declaracion_var                shift and go to state 25
    lista_declaraciones            shift and go to state 35
    empty                          shift and go to state 27
    lista_identificadores          shift and go to state 16

state 26

    (9) vars -> VAR declaracion_var lista_declaraciones .

    MAIN            reduce using rule 9 (vars -> VAR declaracion_var lista_declaraciones .)
    VOID            reduce using rule 9 (vars -> VAR declaracion_var lista_declaraciones .)
    INT_TYPE        reduce using rule 9 (vars -> VAR declaracion_var lista_declaraciones .)
    FLOAT_TYPE      reduce using rule 9 (vars -> VAR declaracion_var lista_declaraciones .)
    LBRACES         reduce using rule 9 (vars -> VAR declaracion_var lista_declaraciones .)


state 27

    (15) lista_declaraciones -> empty .

    MAIN            reduce using rule 15 (lista_declaraciones -> empty .)
    VOID            reduce using rule 15 (lista_declaraciones -> empty .)
    INT_TYPE        reduce using rule 15 (lista_declaraciones -> empty .)
    FLOAT_TYPE      reduce using rule 15 (lista_declaraciones -> empty .)
    LBRACES         reduce using rule 15 (lista_declaraciones -> empty .)


state 28

    (10) declaracion_var -> lista_identificadores COLON . type SEMICOLON
    (16) type -> . INT_TYPE
    (17) type -> . FLOAT_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24

    type                           shift and go to state 36

state 29

    (11) lista_identificadores -> ID lista_identificadores_prima .

    COLON           reduce using rule 11 (lista_identificadores -> ID lista_identificadores_prima .)


state 30

    (12) lista_identificadores_prima -> COMMA . ID lista_identificadores_prima

    ID              shift and go to state 37


state 31

    (13) lista_identificadores_prima -> empty .

    COLON           reduce using rule 13 (lista_identificadores_prima -> empty .)


state 32

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body . END clean_program

    END             shift and go to state 38


state 33

    (18) body -> LBRACES . lista_statements RBRACES
    (19) lista_statements -> . statement lista_statements
    (20) lista_statements -> . empty
    (21) statement -> . print_func
    (22) statement -> . condition
    (23) statement -> . cycle
    (24) statement -> . ID opcion_id
    (25) statement -> . LBRACKETS lista_statements RBRACKETS
    (90) empty -> .
    (28) print_func -> . PRINT LPARENTESIS elemento_impresion lista_elementos RPARENTESIS SEMICOLON
    (38) condition -> . IF LPARENTESIS expresion RPARENTESIS body part_else SEMICOLON
    (34) cycle -> . WHILE add_while LPARENTESIS expresion RPARENTESIS add_goF_W DO body add_goF_Step_W SEMICOLON

    ID              shift and go to state 45
    LBRACKETS       shift and go to state 46
    RBRACES         reduce using rule 90 (empty -> .)
    PRINT           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49

    lista_statements               shift and go to state 39
    statement                      shift and go to state 40
    empty                          shift and go to state 41
    print_func                     shift and go to state 42
    condition                      shift and go to state 43
    cycle                          shift and go to state 44

state 34

    (70) funcs -> prepare_new_func funcs_type add_current_type . ID add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON

    ID              shift and go to state 50


state 35

    (14) lista_declaraciones -> declaracion_var lista_declaraciones .

    MAIN            reduce using rule 14 (lista_declaraciones -> declaracion_var lista_declaraciones .)
    VOID            reduce using rule 14 (lista_declaraciones -> declaracion_var lista_declaraciones .)
    INT_TYPE        reduce using rule 14 (lista_declaraciones -> declaracion_var lista_declaraciones .)
    FLOAT_TYPE      reduce using rule 14 (lista_declaraciones -> declaracion_var lista_declaraciones .)
    LBRACES         reduce using rule 14 (lista_declaraciones -> declaracion_var lista_declaraciones .)


state 36

    (10) declaracion_var -> lista_identificadores COLON type . SEMICOLON

    SEMICOLON       shift and go to state 51


state 37

    (12) lista_identificadores_prima -> COMMA ID . lista_identificadores_prima
    (12) lista_identificadores_prima -> . COMMA ID lista_identificadores_prima
    (13) lista_identificadores_prima -> . empty
    (90) empty -> .

    COMMA           shift and go to state 30
    COLON           reduce using rule 90 (empty -> .)

    lista_identificadores_prima    shift and go to state 52
    empty                          shift and go to state 31

state 38

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END . clean_program
    (2) clean_program -> .

    $end            reduce using rule 2 (clean_program -> .)

    clean_program                  shift and go to state 53

state 39

    (18) body -> LBRACES lista_statements . RBRACES

    RBRACES         shift and go to state 54


state 40

    (19) lista_statements -> statement . lista_statements
    (19) lista_statements -> . statement lista_statements
    (20) lista_statements -> . empty
    (21) statement -> . print_func
    (22) statement -> . condition
    (23) statement -> . cycle
    (24) statement -> . ID opcion_id
    (25) statement -> . LBRACKETS lista_statements RBRACKETS
    (90) empty -> .
    (28) print_func -> . PRINT LPARENTESIS elemento_impresion lista_elementos RPARENTESIS SEMICOLON
    (38) condition -> . IF LPARENTESIS expresion RPARENTESIS body part_else SEMICOLON
    (34) cycle -> . WHILE add_while LPARENTESIS expresion RPARENTESIS add_goF_W DO body add_goF_Step_W SEMICOLON

    ID              shift and go to state 45
    LBRACKETS       shift and go to state 46
    RBRACES         reduce using rule 90 (empty -> .)
    RBRACKETS       reduce using rule 90 (empty -> .)
    PRINT           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49

    statement                      shift and go to state 40
    lista_statements               shift and go to state 55
    empty                          shift and go to state 41
    print_func                     shift and go to state 42
    condition                      shift and go to state 43
    cycle                          shift and go to state 44

state 41

    (20) lista_statements -> empty .

    RBRACES         reduce using rule 20 (lista_statements -> empty .)
    RBRACKETS       reduce using rule 20 (lista_statements -> empty .)


state 42

    (21) statement -> print_func .

    ID              reduce using rule 21 (statement -> print_func .)
    LBRACKETS       reduce using rule 21 (statement -> print_func .)
    PRINT           reduce using rule 21 (statement -> print_func .)
    IF              reduce using rule 21 (statement -> print_func .)
    WHILE           reduce using rule 21 (statement -> print_func .)
    RBRACES         reduce using rule 21 (statement -> print_func .)
    RBRACKETS       reduce using rule 21 (statement -> print_func .)


state 43

    (22) statement -> condition .

    ID              reduce using rule 22 (statement -> condition .)
    LBRACKETS       reduce using rule 22 (statement -> condition .)
    PRINT           reduce using rule 22 (statement -> condition .)
    IF              reduce using rule 22 (statement -> condition .)
    WHILE           reduce using rule 22 (statement -> condition .)
    RBRACES         reduce using rule 22 (statement -> condition .)
    RBRACKETS       reduce using rule 22 (statement -> condition .)


state 44

    (23) statement -> cycle .

    ID              reduce using rule 23 (statement -> cycle .)
    LBRACKETS       reduce using rule 23 (statement -> cycle .)
    PRINT           reduce using rule 23 (statement -> cycle .)
    IF              reduce using rule 23 (statement -> cycle .)
    WHILE           reduce using rule 23 (statement -> cycle .)
    RBRACES         reduce using rule 23 (statement -> cycle .)
    RBRACKETS       reduce using rule 23 (statement -> cycle .)


state 45

    (24) statement -> ID . opcion_id
    (26) opcion_id -> . f_call SEMICOLON
    (27) opcion_id -> . assign
    (85) f_call -> . LPARENTESIS argumentos RPARENTESIS
    (33) assign -> . EQUALS expresion SEMICOLON

    LPARENTESIS     shift and go to state 59
    EQUALS          shift and go to state 60

    opcion_id                      shift and go to state 56
    f_call                         shift and go to state 57
    assign                         shift and go to state 58

state 46

    (25) statement -> LBRACKETS . lista_statements RBRACKETS
    (19) lista_statements -> . statement lista_statements
    (20) lista_statements -> . empty
    (21) statement -> . print_func
    (22) statement -> . condition
    (23) statement -> . cycle
    (24) statement -> . ID opcion_id
    (25) statement -> . LBRACKETS lista_statements RBRACKETS
    (90) empty -> .
    (28) print_func -> . PRINT LPARENTESIS elemento_impresion lista_elementos RPARENTESIS SEMICOLON
    (38) condition -> . IF LPARENTESIS expresion RPARENTESIS body part_else SEMICOLON
    (34) cycle -> . WHILE add_while LPARENTESIS expresion RPARENTESIS add_goF_W DO body add_goF_Step_W SEMICOLON

    ID              shift and go to state 45
    LBRACKETS       shift and go to state 46
    RBRACKETS       reduce using rule 90 (empty -> .)
    PRINT           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49

    lista_statements               shift and go to state 61
    statement                      shift and go to state 40
    empty                          shift and go to state 41
    print_func                     shift and go to state 42
    condition                      shift and go to state 43
    cycle                          shift and go to state 44

state 47

    (28) print_func -> PRINT . LPARENTESIS elemento_impresion lista_elementos RPARENTESIS SEMICOLON

    LPARENTESIS     shift and go to state 62


state 48

    (38) condition -> IF . LPARENTESIS expresion RPARENTESIS body part_else SEMICOLON

    LPARENTESIS     shift and go to state 63


state 49

    (34) cycle -> WHILE . add_while LPARENTESIS expresion RPARENTESIS add_goF_W DO body add_goF_Step_W SEMICOLON
    (35) add_while -> .

    LPARENTESIS     reduce using rule 35 (add_while -> .)

    add_while                      shift and go to state 64

state 50

    (70) funcs -> prepare_new_func funcs_type add_current_type ID . add_function LPARENTESIS start_func_vars parametros RPARENTESIS LBRACES bloque_funcion RBRACES end_func SEMICOLON
    (75) add_function -> .

    LPARENTESIS     reduce using rule 75 (add_function -> .)

    add_function                   shift and go to state 65

state 51

    (10) declaracion_var -> lista_identificadores COLON type SEMICOLON .

    ID              reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)
    MAIN            reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)
    VOID            reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)
    INT_TYPE        reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)
    FLOAT_TYPE      reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)
    LBRACES         reduce using rule 10 (declaracion_var -> lista_identificadores COLON type SEMICOLON .)


state 52

    (12) lista_identificadores_prima -> COMMA ID lista_identificadores_prima .

    COLON           reduce using rule 12 (lista_identificadores_prima -> COMMA ID lista_identificadores_prima .)


state 53

    (1) program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program .

    $end            reduce using rule 1 (program -> PROGRAM create_dirfunc ID create_id SEMICOLON declaraciones funciones MAIN body END clean_program .)


state 54

    (18) body -> LBRACES lista_statements RBRACES .

    END             reduce using rule 18 (body -> LBRACES lista_statements RBRACES .)
    ELSE            reduce using rule 18 (body -> LBRACES lista_statements RBRACES .)
    SEMICOLON       reduce using rule 18 (body -> LBRACES lista_statements RBRACES .)
    RBRACES         reduce using rule 18 (body -> LBRACES lista_statements RBRACES .)


state 55

    (19) lista_statements -> statement lista_statements .

    RBRACES         reduce using rule 19 (lista_statements -> statement lista_statements .)
    RBRACKETS       reduce using rule 19 (lista_statements -> statement lista_statements .)


state 56

    (24) statement -> ID opcion_id .

    ID              reduce using rule 24 (statement -> ID opcion_id .)
    LBRACKETS       reduce using rule 24 (statement -> ID opcion_id .)
    PRINT           reduce using rule 24 (statement -> ID opcion_id .)
    IF              reduce using rule 24 (statement -> ID opcion_id .)
    WHILE           reduce using rule 24 (statement -> ID opcion_id .)
    RBRACES         reduce using rule 24 (statement -> ID opcion_id .)
    RBRACKETS       reduce using rule 24 (statement -> ID opcion_id .)


state 57

    (26) opcion_id -> f_call . SEMICOLON

    SEMICOLON       shift and go to state 66


state 58

    (27) opcion_id -> assign .

    ID              reduce using rule 27 (opcion_id -> assign .)
    LBRACKETS       reduce using rule 27 (opcion_id -> assign .)
    PRINT           reduce using rule 27 (opcion_id -> assign .)
    IF              reduce using rule 27 (opcion_id -> assign .)
    WHILE           reduce using rule 27 (opcion_id -> assign .)
    RBRACES         reduce using rule 27 (opcion_id -> assign .)
    RBRACKETS       reduce using rule 27 (opcion_id -> assign .)


state 59

    (85) f_call -> LPARENTESIS . argumentos RPARENTESIS
    (86) argumentos -> . expresion lista_argumentos
    (87) argumentos -> . empty
    (41) expresion -> . exp comparacion
    (90) empty -> .
    (47) exp -> . termino suma_resta
    (51) termino -> . factor mult_div
    (55) factor -> . agrupacion
    (56) factor -> . signo_unario
    (57) factor -> . cte
    (58) factor -> . ID id_opcion
    (61) agrupacion -> . LPARENTESIS push_paren expresion RPARENTESIS close_paren
    (64) signo_unario -> . PLUS valor
    (65) signo_unario -> . MINUS valor
    (68) cte -> . CTE_INT
    (69) cte -> . CTE_FLOAT

    RPARENTESIS     reduce using rule 90 (empty -> .)
    ID              shift and go to state 77
    LPARENTESIS     shift and go to state 67
    PLUS            shift and go to state 78
    MINUS           shift and go to state 79
    CTE_INT         shift and go to state 80
    CTE_FLOAT       shift and go to state 81

    argumentos                     shift and go to state 68
    expresion                      shift and go to state 69
    empty                          shift and go to state 70
    exp                            shift and go to state 71
    termino                        shift and go to state 72
    factor                         shift and go to state 73
    agrupacion                     shift and go to state 74
    signo_unario                   shift and go to state 75
    cte                            shift and go to state 76

state 60

    (33) assign -> EQUALS . expresion SEMICOLON
    (41) expresion -> . exp comparacion
    (47) exp -> . termino suma_resta
    (51) termino -> . factor mult_div
    (55) factor -> . agrupacion
    (56) factor -> . signo_unario
    (57) factor -> . cte
    (58) factor -> . ID id_opcion
    (61) agrupacion -> . LPARENTESIS push_paren expresion RPARENTESIS close_paren
    (64) signo_unario -> . PLUS valor
    (65) signo_unario -> . MINUS valor
    (68) cte -> . CTE_INT
    (69) cte -> . CTE_FLOAT

    ID              shift and go to state 77
    LPARENTESIS     shift and go to state 67
    PLUS            shift and go to state 78
    MINUS           shift and go to state 79
    CTE_INT         shift and go to state 80
    CTE_FLOAT       shift and go to state 81

    expresion                      shift and go to state 82
    exp                            shift and go to state 71
    termino                        shift and go to state 72
    factor                         shift and go to state 73
    agrupacion                     shift and go to state 74
    signo_unario                   shift and go to state 75
    cte                            shift and go to state 76

state 61

    (25) statement -> LBRACKETS lista_statements . RBRACKETS

    RBRACKETS       shift and go to state 83


state 62

    (28) print_func -> PRINT LPARENTESIS . elemento_impresion lista_elementos RPARENTESIS SEMICOLON
    (29) elemento_impresion -> . expresion
    (30) elemento_impresion -> . CTE_STRING
    (41) expresion -> . exp comparacion
    (47) exp -> . termino suma_resta
    (51) termino -> . factor mult_div
    (55) factor -> . agrupacion
    (56) factor -> . signo_unario
    (57) factor -> . cte
    (58) factor -> . ID id_opcion
    (61) agrupacion -> . LPARENTESIS push_paren expresion RPARENTESIS close_paren
    (64) signo_unario -> . PLUS valor
    (65) signo_unario -> . MINUS valor
    (68) cte -> . CTE_INT
    (69) cte -> . CTE_FLOAT

    CTE_STRING      shift and go to state 86
    ID              shift and go to state 77
    LPARENTESIS     shift and go to state 67
    PLUS            shift and go to state 78
    MINUS           shift and go to state 79
    CTE_INT         shift and go to state 80
    CTE_FLOAT       shift and go to state 81

    elemento_impresion             shift and go to state 84
    expresion                      shift and go to state 85
    exp                            shift and go to state 71
    termino                        shift and go to state 72
    factor                         shift and go to state 73
    agrupacion                     shift and go to state 74
    signo_unario                   shift and go to state 75
    cte                            shift and go to state 76

state 63
